
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static bool valid_pat_type(unsigned t)
{
 return t < 8 && (1 << t) & 0xf3;
}
